[gd_scene load_steps=15 format=2]

[ext_resource path="res://KinematicBody.gd" type="Script" id=1]
[ext_resource path="res://gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://weapon.gd" type="Script" id=3]
[ext_resource path="res://Gun_Shot-Marvin-1140816320.wav" type="AudioStream" id=4]
[ext_resource path="res://gun-cocking-02.wav" type="AudioStream" id=5]
[ext_resource path="res://cyZUtxf.png" type="Texture" id=6]
[ext_resource path="res://hard_shoes_1-daniel_simon.wav" type="AudioStream" id=7]
[ext_resource path="res://Pain-SoundBible.com-1883168362.wav" type="AudioStream" id=8]
[ext_resource path="res://Dark HORROR CLIMAX Background Instrumental  Royalty Free Music(2).wav" type="AudioStream" id=9]
[ext_resource path="res://Zombie Sound Effects (free).wav" type="AudioStream" id=10]

[sub_resource type="CapsuleShape" id=1]
height = 1.70468

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0.0862745, 1, 1 )

[sub_resource type="CapsuleShape" id=4]

[node name="player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.35099, 6.27641 )
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0088644, 0 )
input_ray_pickable = false

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 1.65199, 0, 0, 0, -0.010708, 0.819501, 0, -1.81977, -0.023778, 0, 1.75508, 0.00314188 )
shape = SubResource( 1 )

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.01622, 4.43776 )

[node name="SpotLight" type="SpotLight" parent="head"]
transform = Transform( 1, 0, 0, 0, 0.997779, 0.0666167, 0, -0.0666167, 0.997779, 0.0829958, -1.0337, -4.87409 )
light_color = Color( 0.945098, 0.964706, 0.941176, 1 )
light_energy = 1.05
light_indirect_energy = 0.1
spot_range = 11.9445

[node name="Camera" type="Camera" parent="head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.29197, -4.81633 )

[node name="RayCast" type="RayCast" parent="head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -30 )

[node name="gun" parent="head/Camera" instance=ExtResource( 2 )]
transform = Transform( -0.699898, -0.00451686, -0.00437829, -0.0406207, 0.0929144, -0.00109276, 0.0380884, -0.00184293, -0.116988, -1.55428, -0.397988, -0.439021 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.790517, 0, 0, 0, -4.37114e-08, -1, 0, 0.751799, -3.28622e-08, 0.000326157, 1.79248, -0.00633669 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="weapon" type="Node" parent="."]
script = ExtResource( 3 )

[node name="gunshot" type="AudioStreamPlayer" parent="weapon"]
stream = ExtResource( 4 )

[node name="reload" type="AudioStreamPlayer" parent="weapon"]
stream = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.790517, 0, 0, 0, -4.37114e-08, -1, 0, 0.751799, -3.28622e-08, 0, 1.79248, 0 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 9.4093
margin_bottom = 12.6705
texture = ExtResource( 6 )

[node name="walking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="zombie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="area_entered" from="Area" to="weapon" method="_on_Area_area_entered"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
